--- a/src/app/shoping-cart/detail-item/detail-item.component.html
+++ b/src/app/shoping-cart/detail-item/detail-item.component.html
@@ -1,20 +1,29 @@
-  <td class="thumbnail-img">
-      <a href="#">
-<img class="img-fluid" src="../../../assets/Image/SaleProduct-Image/{{order?.thumbnail}}" alt="" />
-</a>
-  </td>
-  <td class="name-pr">
-      <a href="#">{{order?.name}}</a>
-  </td>
-  <td class="price-pr">
-      <p>{{order?.priceToBuy}}</p>
-  </td>
-  <td class="quantity-box"><input type="number" size="4" value="1" min="0" step="1" class="c-input-text qty text"></td>
-  <td class="total-pr">
-      <p>$ 80.0</p>
-  </td>
-  <td class="remove-pr">
-      <a href="#">
-<i class="fas fa-times"></i>
-</a>
-  </td>
+<tr class="row" style="margin-left: -1px;">
+  <th class="col-2">
+    <a href="#">
+      <img class="img-fluid" src="../../../assets/Image/SaleProduct-Image/{{pendingOrder?.thumbnail}}" alt="" />
+    </a>
+  </th>
+  <th class="col-2">
+    <p href="#">{{pendingOrder?.productName}}</p>
+  </th>
+  <th class="col-2">
+    <p>{{pendingOrder?.priceUnit | currency: "VND"}}</p>
+  </th>
+  <th class="col-1">
+    <p>{{pendingOrder?.discountPercent}}%</p>
+  </th>
+  <th class="col-2 ">
+    <div class="quantity-box">
+      <input type="number" maxlength="4" size="4" value="{{pendingOrder?.quantity}}" min="0" step="1">
+    </div>
+  </th>
+  <th class="col-2">
+    <p>{{totalPrice | currency: "VND"}}</p>
+  </th>
+  <th class="col-1">
+    <a href="#" style="margin-left: 5px;">
+      <i style="color: black" class="fas fa-times"></i>
+    </a>
+  </th>
+</tr>
