--- a/src/app/shoping-cart/shopping-cart.component.html
+++ b/src/app/shoping-cart/shopping-cart.component.html
@@ -6,27 +6,51 @@
               <div class="table-main table-responsive">
                   <table class="table">
                       <thead>
-                          <tr>
-                              <th>Images</th>
-                              <th>Product Name</th>
-                              <th>Price</th>
-                              <th>Quantity</th>
-                              <th>Total</th>
-                              <th>Remove</th>
+                          <tr class="row" style="margin-left: -1px;">
+                            <th class="col-2">Image</th>
+                            <th class="col-2">Name</th>
+                            <th class="col-2">Price Unit</th>
+                            <th class="col-1">Discount</th>
+                            <th class="col-2">Quantity</th>
+                            <th class="col-2">Total</th>
+                            <th class="col-1">Remove</th>
                           </tr>
                       </thead>
                       <tbody>
-                        <ng-container *ngIf="orders.length != 0">
-                          <tr *ngFor="let order of orders">
-                            <app-detail-item [order]="order"> </app-detail-item>
-                          </tr>
-                        </ng-container>
+                            <tr *ngFor="let pendingOrder of pendingOrders" class="row" style="margin-left: -1px;">
+                              <th class="col-2">
+                                <a href="#">
+                                  <img class="img-fluid" src="../../../assets/Image/SaleProduct-Image/{{pendingOrder?.thumbnail}}" alt="" />
+                                </a>
+                              </th>
+                              <th class="col-2">
+                                <p href="#">{{pendingOrder?.productName}}</p>
+                              </th>
+                              <th class="col-2">
+                                <p>{{pendingOrder?.priceUnit | currency: "VND"}}</p>
+                              </th>
+                              <th class="col-1">
+                                <p>{{pendingOrder?.discountPercent}}%</p>
+                              </th>
+                              <th class="col-2 ">
+                                <div class="quantity-box">
+                                  <input #quantiTyInPut type="number" maxlength="4" size="4" value="{{pendingOrder?.quantity}}" min="0" step="1" (change)="change(pendingOrder, quantiTyInPut.value)">
+                                </div>
+                              </th>
+                              <th class="col-2">
+                                <p>{{pendingOrder?.totalPrice | currency: "VND"}}</p>
+                              </th>
+                              <th class="col-1">
+                                <a href="#" style="margin-left: 5px;">
+                                  <i style="color: black" class="fas fa-times"></i>
+                                </a>
+                              </th>
+                            </tr>
                       </tbody>
                   </table>
               </div>
           </div>
       </div>
-      <app-coupon-code></app-coupon-code>
-      <app-summary-box></app-summary-box>
+      <app-summary-box [orders] = "(orders$ | async)" ></app-summary-box>
   </div>
 </div>
