--- a/src/app/shoping-cart/summary-box/summary-box.component.html
+++ b/src/app/shoping-cart/summary-box/summary-box.component.html
@@ -1,25 +1,36 @@
 
       <div class="row my-5">
-        <div class="col-lg-8 col-sm-12"></div>
+        <div class="col-lg-8 col-sm-12">
+          <div class="row my-5">
+            <div class="col-lg-6 col-sm-6">
+                <div class="coupon-box">
+                    <div class="input-group input-group-sm">
+                        <input [(ngModel)]="couponInput" class="form-control" placeholder="Enter your coupon code" aria-label="Coupon code"
+                          type="text">
+                        <div class="input-group-append">
+                            <button class="btn btn-theme" type="button" (click)="applyCoupon()">Apply Coupon</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+        </div>
         <div class="col-lg-4 col-sm-12">
             <div class="order-box">
                 <h3>Order summary</h3>
                 <div class="d-flex">
                     <h4>Sub Total</h4>
-                    <div class="ml-auto font-weight-bold"> $ 130 </div>
-                </div>
-                <div class="d-flex">
-                    <h4>Discount</h4>
-                    <div class="ml-auto font-weight-bold"> $ 40 </div>
+                    <div class="ml-auto font-weight-bold"> {{summaryCart.subTotal | currency: "VND"}} </div>
                 </div>
                 <hr class="my-1">
                 <div class="d-flex">
                     <h4>Coupon Discount</h4>
-                    <div class="ml-auto font-weight-bold"> $ 10 </div>
+                    <div class="ml-auto font-weight-bold"> {{summaryCart.coupon.value}}% (-{{getCouponInSubTotal(summaryCart.subTotal) | currency:"VND"}})</div>
                 </div>
                 <div class="d-flex">
                     <h4>Tax</h4>
-                    <div class="ml-auto font-weight-bold"> $ 2 </div>
+                    <div class="ml-auto font-weight-bold"> {{ summaryCart.tax | currency: "VND"}} </div>
                 </div>
                 <div class="d-flex">
                     <h4>Shipping Cost</h4>
@@ -28,7 +39,7 @@
                 <hr>
                 <div class="d-flex gr-total">
                     <h5>Grand Total</h5>
-                    <div class="ml-auto h5"> $ 388 </div>
+                    <div class="ml-auto h5"> {{summaryCart.grandTotal | currency: "VND"}} </div>
                 </div>
                 <hr> </div>
         </div>
