--- a/src/app/shoping-cart/template/css/style.css
+++ b/src/app/shoping-cart/template/css/style.css
@@ -38,7 +38,7 @@
      line-height: 1.80857;
 }
  a {
-     color: #1f1f1f;
+     color: black;
      text-decoration: none !important;
      outline: none !important;
      -webkit-transition: all .3s ease-in-out;
@@ -128,6 +128,7 @@
      outline: 0;
 }
  p{
+  text-align: center;
      margin: 0px;
 }
  .bootstrap-select .dropdown-toggle:focus{
@@ -1848,17 +1849,22 @@
      color: #ffffff;
 }
  .table-main .table thead th{
-     font-size: 18px;
+     font-size: 14px;
+     text-align: center;
 }
  .table-main table td.thumbnail-img{
      width: 120px;
 }
+.table-main table tr{
+  text-align: center;
+}
  .table-main table td{
+    text-align: center;
      vertical-align: middle;
      font-size: 16px;
 }
- .quantity-box input{
-     width: 60px;
+.quantity-box input{
+     width: 20px;
      border: 2px solid #010101;
      text-align: center;
 }
@@ -2328,7 +2334,7 @@
      color: #ffffff;
 }
  .quantity-box input{
-     width: 100%;
+     width: 50px
 }
  .price-box-bar{
      margin-bottom: 30px;
