--- a/src/app/shoping-cart/summary-box/summary-box.component.html
+++ b/src/app/shoping-cart/summary-box/summary-box.component.html
@@ -1,5 +1,8 @@
 
-      <div class="row my-5">
+<!-- Title Box -->
+
+     <!-- Shopping Cart -->
+     <div class="row my-5">
         <div class="col-lg-8 col-sm-12">
           <div class="row my-5">
             <div class="col-lg-6 col-sm-6">
