--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -1,5 +1,5 @@
 
-<app-title-box></app-title-box>
+<app-title-box [title]="title" [thumbnail]="backgroundImage"> </app-title-box>
 <div class="shop-box-inner">
     <div class="container">
         <div class="row">
