--- a/src/app/shoping-cart/shopping-cart.component.html
+++ b/src/app/shoping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<app-title-box></app-title-box>
+<app-title-box [title]="title" [thumbnail]="backgroundImage"> </app-title-box>
 <div class="cart-box-main">
   <div class="container">
       <div class="row">
@@ -24,7 +24,7 @@
                                 </a>
                               </th>
                               <th class="col-2">
-                                <p href="#">{{pendingOrder?.productName}}</p>
+                                <p style="white-space: normal;">{{pendingOrder?.productName}}</p>
                               </th>
                               <th class="col-2">
                                 <p>{{pendingOrder?.priceUnit | currency: "VND"}}</p>
@@ -34,14 +34,14 @@
                               </th>
                               <th class="col-2 ">
                                 <div class="quantity-box">
-                                  <input #quantiTyInPut type="number" maxlength="4" size="4" value="{{pendingOrder?.quantity}}" min="0" step="1" (change)="change(pendingOrder, quantiTyInPut.value)">
+                                  <input #quantiTyInPut type="number" maxlength="4" size="4" value="{{pendingOrder?.quantity}}" min="0" step="1" (change)="changeQuantity(pendingOrder, quantiTyInPut.value)">
                                 </div>
                               </th>
                               <th class="col-2">
                                 <p>{{pendingOrder?.totalPrice | currency: "VND"}}</p>
                               </th>
                               <th class="col-1">
-                                <a href="#" style="margin-left: 5px;">
+                                <a [routerLink]="['/shopping-cart']" style="margin-left: 5px;" (click)=removePendingOrder(pendingOrder.id)>
                                   <i style="color: black" class="fas fa-times"></i>
                                 </a>
                               </th>
@@ -51,6 +51,6 @@
               </div>
           </div>
       </div>
-      <app-summary-box [orders] = "(orders$ | async)" ></app-summary-box>
+      <app-summary-box ></app-summary-box>
   </div>
 </div>
