--- a/src/app/shoping-cart/shopping-cart.component.html
+++ b/src/app/shoping-cart/shopping-cart.component.html
@@ -1,6 +1,6 @@
 <app-title-box [title]="title" [thumbnail]="backgroundImage"> </app-title-box>
 <div class="cart-box-main">
-  <div class="container">
+  <div class="container" style="max-width: 1400px;">
       <div class="row">
           <div class="col-lg-12">
               <div class="table-main table-responsive">
