--- a/src/app/shoping-cart/summary-box/summary-box.component.html
+++ b/src/app/shoping-cart/summary-box/summary-box.component.html
@@ -1,11 +1,11 @@
 
 <!-- Title Box -->
 
-     <!-- Shopping Cart -->
+<div class="col-12 d-flex shopping-box"><a [routerLink]="['/sale-product']" routerLinkActive="router-link-active"  class="ml-auto btn hvr-hover">Tiếp tục mua sắm</a> </div>
+<!-- Shopping Cart -->
      <div class="row my-5">
-        <div class="col-lg-8 col-sm-12">
-          <div class="row my-5">
-            <div class="col-lg-6 col-sm-6">
+        <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-12 col-sm-6">
                 <div class="coupon-box">
                     <div class="input-group input-group-sm">
                         <input [(ngModel)]="couponInput" class="form-control" placeholder="Enter your coupon code" aria-label="Coupon code"
@@ -16,10 +16,9 @@
                     </div>
                 </div>
             </div>
-          </div>
 
         </div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-6 col-sm-12">
             <div class="order-box">
                 <h3>Order summary</h3>
                 <div class="d-flex">
