update title box

--- a/src/app/shoping-cart/summary-box/summary-box.component.html
+++ b/src/app/shoping-cart/summary-box/summary-box.component.html
@@ -11,7 +11,7 @@
                         <input [(ngModel)]="couponInput" class="form-control" placeholder="Enter your coupon code" aria-label="Coupon code"
                           type="text">
                         <div class="input-group-append">
-                            <button class="btn btn-theme" type="button" (click)="applyCoupon()">Apply Coupon</button>
+                            <button class="btn btn-theme" type="button" (click)="applyCoupon()">Áp dụng</button>
                         </div>
                     </div>
                 </div>
@@ -45,5 +45,5 @@
                 </div>
                 <hr> </div>
         </div>
-        <div class="col-12 d-flex shopping-box"><a href="checkout.html" class="ml-auto btn hvr-hover">Checkout</a> </div>
+        <div class="col-12 d-flex shopping-box"><a rout class="ml-auto btn hvr-hover">Tiến hành thanh toán</a> </div>
     </div>
