--- a/src/app/tittle-box/title-box.component.html
+++ b/src/app/tittle-box/title-box.component.html
@@ -1,15 +1,13 @@
-  <!-- Start All Title Box -->
-  <div class="all-title-box" [style.background]="'url(../../assets/title-image/{{thumbnail}})'" >
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>{{title}}</h2>
-                <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">HOME</a></li>
-                    <li class="breadcrumb-item active">{{title}}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+<div class="all-title-box" style.background-image="url(../../assets/title-image/{{thumbnail}})" >
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h2>{{title}}</h2>
+              <ul class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="#">HOME</a></li>
+                  <li class="breadcrumb-item active">{{title}}</li>
+              </ul>
+          </div>
+      </div>
+  </div>
 </div>
-<!-- End All Title Box -->
