--- a/src/app/shoping-cart/summary-box/summary-box.component.html
+++ b/src/app/shoping-cart/summary-box/summary-box.component.html
@@ -45,5 +45,5 @@
                 </div>
                 <hr> </div>
         </div>
-        <div class="col-12 d-flex shopping-box"><a rout class="ml-auto btn hvr-hover">Tiến hành thanh toán</a> </div>
+        <div class="col-12 d-flex shopping-box"><a [routerLink]="['/payment']" routerLinkActive="router-link-active"  class="ml-auto btn hvr-hover">Tiến hành thanh toán</a> </div>
     </div>
