--- a/src/app/tittle-box/title-box.component.scss
+++ b/src/app/tittle-box/title-box.component.scss
@@ -1330,10 +1330,10 @@ ul.cart-list > li.total > .btn:hover{
   padding-bottom: 30px;
 }
 .all-title-box .breadcrumb{
-  background: #d33b33;
+  background: crimson;
   margin: 0px;
   display: inline-block;
-  border-radius: 0px;
+  border-radius: 2px;
 }
 .all-title-box .breadcrumb li{
   display: inline-block;
