--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -18,6 +18,9 @@
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4" *ngFor="let saleProduct of saleProducts">
                         <div class="products-single fix">
                             <div class="box-img-hover">
+                              <div class="type-lb-discountPercent">
+                                <p class="discountPercent">{{saleProduct.discountPercent}}%</p>
+                            </div>
                                 <div class="type-lb">
                                     <p class="sale">Sale</p>
                                 </div>
