--- a/src/app/product-sale/product-sale-list/product-sale-list.component.scss
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.scss
@@ -22,33 +22,33 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     line-height: 120% !important;
     color: #1f1f1f;
-    margin: 0 
+    margin: 0
 }
 h1 {
-    font-size: 24px 
+    font-size: 24px
 }
 h2 {
-    font-size: 22px 
+    font-size: 22px
 }
 h3 {
-    font-size: 18px 
+    font-size: 18px
 }
 h4 {
-    font-size: 16px 
+    font-size: 16px
 }
 h5 {
-    font-size: 14px 
+    font-size: 14px
 }
 h6 {
-    font-size: 13px 
+    font-size: 13px
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: #212121;
     text-decoration: none!important;
-    opacity: 1 
+    opacity: 1
 }
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
-    opacity: .8 
+    opacity: .8
 }
 a {
     color: #1f1f1f;
@@ -105,7 +105,7 @@ p{
     opacity: 1;
 }
 .bootstrap-select .dropdown-toggle:focus{
-    box-shadow: none !important 
+    box-shadow: none !important
 }
 /*------------------------------------------------------------------ LOADER -------------------------------------------------------------------*/
 #back-to-top {
@@ -822,6 +822,20 @@ ul.cart-list > li.total > .btn:hover{
     padding: 2px 10px;
     font-weight: 700;
     text-transform: uppercase;
+    border-bottom-left-radius: 15px;
+}
+.type-lb-discountPercent{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index:11;
+}
+.type-lb-discountPercent .discountPercent{
+  color: red;
+  padding: 2px 10px;
+  font-weight: bolder;
+  text-transform: uppercase;
+  /* border-bottom-left-radius: 15px; */
 }
 .type-lb .new{
     background: #010101;
@@ -1487,7 +1501,7 @@ ul.cart-list > li.total > .btn:hover{
     opacity: 0.9;
     position: relative;
     transform: translate(-35px, 35px);
-    transition: all 0.3s ease-in-out 0s 
+    transition: all 0.3s ease-in-out 0s
 }
 .our-team .social li a:hover{
     width: 40px;
@@ -1532,7 +1546,7 @@ ul.cart-list > li.total > .btn:hover{
     transition-delay: 0.0s;
 }
 .hover-team:hover .social li a{
-    transform: translate(0, 0) 
+    transform: translate(0, 0)
 }
 .hover-team:hover img{
     opacity: 0.5;
