--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,3 +1,4 @@
+<app-title-box [title]="title" [thumbnail]="backgroundImage"> </app-title-box>
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
