--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
 
                     <div class="cart">
                         <div class="cart-center">
-                            <a [routerLink]="['/shopping-cart']"><i class="fas fa-shopping-cart"></i></a>[{{totalProduct}}]
+                            <a [routerLink]="['/shopping-cart']"><i class="fas fa-shopping-cart"></i></a>({{totalProduct}})
                         </div>
                     </div>
                     <div class="email">
