--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,8 @@
                 <a href="/" style="margin-right: 20px;"><img src="assets/img/logoCTS.jpg" alt="logoCTS" style="width:100%; "></a>
             </div>
 
-
-
             <div class="icon" style="left: 357px; top: 20px;">
                 <div class="form-inline">
-
 
                     <div class="search">
                         <input type="text" class="form-control input-sm" maxlength="64" placeholder="  Bạn muốn kiếm gì"  />
@@ -62,10 +59,10 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid nav-custom">
             <ul class="nav navbar effect">
-                <li><a [routerLink]="['/product']">SẢN PHẨM</a></li>
+                <li><a [routerLink]="['/product']" >SẢN PHẨM</a></li>
                 <li><a [routerLink]="['/age']">ĐỘ TUỔI</a></li>
                 <li><a [routerLink]="['/gender']">GIỚI TÍNH</a></li>
-                <li><a [routerLink]="['/sale-product']" routerLinkActive="router-link-active" >KHUYẾN MÃI</a></li>
+                <li><a [routerLink]="['/sale-product']"  >KHUYẾN MÃI</a></li>
                 <li><a [routerLink]="['/product-new']">HÀNG MỚI</a></li>
                 <li><a [routerLink]="['/member-cart']">THƯƠNG HIỆU</a></li>
             </ul>
