--- a/src/app/product-sale/sidebar/sidebar.component.scss
+++ b/src/app/product-sale/sidebar/sidebar.component.scss
@@ -2361,3 +2361,6 @@ ul.cart-list > li.total > .btn:hover{
     vertical-align: middle;
     white-space: nowrap;
 }
+button::after{
+  content: '';
+}
