--- a/src/app/detail-product/detail-product.component.html
+++ b/src/app/detail-product/detail-product.component.html
@@ -1,53 +1,46 @@
 <div class="container-fluid">
   <div class="card">
-    <div class="container-fliud"> 
-      <div class="wrapper row">
-        <div class="preview col-md-6">
-          <div class="preview-pic tab-content">
-            <div class="tab-pane active" id="pic-1"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/a237138a07ed0dd2cc8a6fa440635ea6/i/m/img_6177_1.jpg" /></div>
-            <div class="tab-pane" id="pic-2"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/3e75d17be04cbebee9a78c36b24b6eea/i/m/img_6181_1.jpg" /></div>
-            <div class="tab-pane" id="pic-3"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/3e75d17be04cbebee9a78c36b24b6eea/i/m/img_6184_1.jpg" /></div>
-            <div class="tab-pane" id="pic-4"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6182_1.jpg" /></div>
-            <div class="tab-pane" id="pic-5"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6178_1.jpg" /></div>
+    <div class="container-fliud">
+      <div class="wrapper row" *ngFor="let detail of detailProduct">
+        <div class="preview col-md-6" >
+          <div class="preview-pic tab-content" >
+            <div class="tab-pane active" id="pic-1"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailOne}}" /></div>
+            <div class="tab-pane" id="pic-2"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailTwo}}" /></div>
+            <div class="tab-pane" id="pic-3"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailThree}}" /></div>
+
           </div>
           <ul class="preview-thumbnail nav nav-tabs">
-            <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/a237138a07ed0dd2cc8a6fa440635ea6/i/m/img_6177_1.jpg" /></a></li>
-            <li><a data-target="#pic-2" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/3e75d17be04cbebee9a78c36b24b6eea/i/m/img_6181_1.jpg" /></a></li>
-            <li><a data-target="#pic-3" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/3e75d17be04cbebee9a78c36b24b6eea/i/m/img_6184_1.jpg" /></a></li>
-            <li><a data-target="#pic-4" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6182_1.jpg" /></a></li>
-            <li><a data-target="#pic-5" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6178_1.jpg" /></a></li>
+            <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailOne}}" /></a></li>
+            <li><a data-target="#pic-2" data-toggle="tab"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailTwo}}" /></a></li>
+            <li><a data-target="#pic-3" data-toggle="tab"><img src="./../../../assets/Image/SaleProduct-Image/{{detail.thumbnailDetailThree}}" /></a></li>
           </ul>
         </div>
-        
+
         <div class="details col-md-6">
-          <h3 class="product-title">siêu xe lamborghini</h3>
+          <h3 class="product-title">{{detail.nameProduct}}</h3>
           <div class="rating">
             <div class="stars">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star "></span>
+              <span class="fa fa-star "></span>
+              <span class="fa fa-star "></span>
               <span class="fa fa-star"></span>
               <span class="fa fa-star"></span>
+
+              <!-- <span class="fa fa-star checked"></span> -->
             </div>
-            <span class="review-no">41 đánh giá</span>
+            <!-- <span class="review-no">41 đánh giá</span> -->
           </div>
-          <p class="product-description">siêu xe phiên bản giới hạn 63 chiếc trên toàn thế giới</p>
-          <h4 class="price">Giá: <span>2.000.000 VNĐ</span></h4>
-          <p class="vote"><strong>91%</strong> thích ! <strong>(87 votes)</strong></p>
-          <h5 class="sizes">size:
-            <span class="size" data-toggle="tooltip" title="small">s</span>
-            <span class="size" data-toggle="tooltip" title="medium">m</span>
-            <span class="size" data-toggle="tooltip" title="large">l</span>
-            <span class="size" data-toggle="tooltip" title="xtra large">xl</span>
-          </h5>
-          <h5 class="colors">colors:
-            <!-- <span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
-            <span class="color green"></span>
-            <span class="color blue"></span> -->
-            <a href=""><span class="color orange not-available" data-toggle="tooltip" title="not in store"></span></a>
-            <a href=""><span class="color green"></span></a>
-            <a href=""><span class="color blue"></span></a>
-          </h5>
+          <p class="product-description">{{detail.description}}</p>
+          <h6 class="detail">Thương hiệu: <span>{{detail.brand}}</span></h6>
+          <h6 class="detail">SKU: <span></span>{{detail.SKU}}</h6>
+          <h6 class="detail">So luong:</h6>
+          <div class="count-adj detail">
+            <button class="btn-adj">-</button>
+            <h6 class="count">{{detail.quantity}}</h6>
+            <button class="btn-adj">+</button>
+          </div>
+          <h4 class="detail"><span>{{detail.priceToBuy}}</span></h4>
+
           <div class="action">
             <button class="add-to-cart btn btn-default" type="button">thêm vào giỏ hàng</button>
             <button class="like btn btn-default ml-2" type="button"><span class="fa fa-heart"></span></button>
