--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -25,7 +25,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
-              <label for="exampleFormControlInput1">Email address</label>
+              <label for="exampleFormControlInput1">Email</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
           </div>
