--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -28,16 +28,16 @@
                               <img src="./../../../assets/Image/SaleProduct-Image/{{product.thumbnail}}" alt="" class="img-fluid">
                               <div class="mask-icon">
                                   <ul>
-                                      <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
+                                      <li><a [routerLink]="['/detail-product']" data-toggle="tooltip" data-placement="right" title="View" (click)="addToDetail(product)"><i class="fas fa-eye"></i></a></li>
                                       <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                       <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
                                   </ul>
-                                  <a class="cart" (click) = "addToCart(product)">Add to Cart</a>
-
+                                  <a class="cart" (click) = "addToCart(product)" >Add to Cart</a>
+                                  
                               </div>
                           </div>
                           <div class="why-text">
-                              <h4>{{product.name}}</h4>
+                              <h4><a (click) = "addToDetail(product)" [routerLink]="['/detail-product']">{{product.name}}</a></h4>
                               <h5>SKU: {{product.SKU}}</h5>
                               <div class="price-box">
                                   <span class="priceToBuy">{{product.priceToBuy | currency: "VND"}}</span>
