--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -44,7 +44,7 @@
           <!--Grid column-->
           <div class="col-auto">
             <p class="pt-2">
-              <strong>Sign up for our newsletter</strong>
+              <strong>Đăng kí nhận bản tin của chúng tôi</strong>
             </p>
           </div>
           <!--Grid column-->
@@ -54,7 +54,7 @@
             <!-- Email input -->
             <div class="form-outline form-white mb-4">
               <input type="email" id="form5Example2" class="form-control" />
-              <label class="form-label" for="form5Example2">Email address</label>
+              <label class="form-label" for="form5Example2">Email</label>
             </div>
           </div>
           <!--Grid column-->
@@ -63,7 +63,7 @@
           <div class="col-auto">
             <!-- Submit button -->
             <button type="submit" class="btn btn-outline-light mb-4">
-              Subscribe
+              Đăng kí
             </button>
           </div>
           <!--Grid column-->
@@ -73,100 +73,38 @@
     </section>
     <!-- Section: Form -->
 
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-        
-        
-      </p>
-    </section>
-    <!-- Section: Text -->
-
     <!-- Section: Links -->
     <section class="">
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
+        <div class="col-lg-3 col-md-3 mb-4 mb-md-0">
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-white">Link 1</a>
+              <a [routerLink]="['/products']" class="text-white">Sản phẩm</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 2</a>
+              <a [routerLink]="['/age']" class="text-white">Độ tuổi</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 3</a>
+              <a [routerLink]="['/gender']" class="text-white">Giới tính</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 4</a>
+              <a [routerLink]="['/sale-product']" class="text-white">Khuyến mãi</a>
+            </li>
+            <li>
+              <a [routerLink]="['/product-new']" class="text-white">Hàng mới</a>
+            </li>
+            <li>
+              <a [routerLink]="['/member-cart']" class="text-white">Thương hiệu</a>
             </li>
           </ul>
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
+        <div class="col-lg-3">
+          <img class="img" src="assets/img/logoCTS.jpg" alt="">
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
+        <div class="col-md-6 col-lg-6 map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.2588533438757!2d106.78567241433737!3d10.86790596047136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276398969f7b%3A0x9672b7efd0893fc4!2sNong%20Lam%20University!5e0!3m2!1sen!2s!4v1625821651427!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <!--Grid column-->
       </div>
@@ -178,8 +116,8 @@
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    © 2021 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">ToyStore.com</a>
   </div>
   <!-- Copyright -->
 </footer>
