--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12">
             <app-sidebar></app-sidebar>
