--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -81,22 +81,22 @@
         <div class="col-lg-3 col-md-3 mb-4 mb-md-0">
           <ul class="list-unstyled mb-0">
             <li>
-              <a [routerLink]="['/products']" class="text-white">Sản phẩm</a>
+              <a href="/products" class="text-white">Sản phẩm</a>
             </li>
             <li>
-              <a [routerLink]="['/age']" class="text-white">Độ tuổi</a>
+              <a href="/age" class="text-white">Độ tuổi</a>
             </li>
             <li>
-              <a [routerLink]="['/gender']" class="text-white">Giới tính</a>
+              <a href="/gender" class="text-white">Giới tính</a>
             </li>
             <li>
-              <a [routerLink]="['/sale-product']" class="text-white">Khuyến mãi</a>
+              <a href="/sale-product" class="text-white">Khuyến mãi</a>
             </li>
             <li>
-              <a [routerLink]="['/product-new']" class="text-white">Hàng mới</a>
+              <a href="/product-new" class="text-white">Hàng mới</a>
             </li>
             <li>
-              <a [routerLink]="['/member-cart']" class="text-white">Thương hiệu</a>
+              <a href="/member-cart" class="text-white">Thương hiệu</a>
             </li>
           </ul>
         </div>
