--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -15,6 +15,9 @@ footer{
         text-decoration: none;
         font-weight: 200px;
     }
+    a:hover{
+      border-bottom:1px solid azure ;
+    }
     .text-uppercase{
         text-decoration:underline;
     }
