--- a/src/app/member-card/member-card-list/member-card-list.component.html
+++ b/src/app/member-card/member-card-list/member-card-list.component.html
@@ -10,9 +10,9 @@
             </ul>
             </div>
         </div>
-        
+
     </div>
 
-            <input type="text" #nameInput name="username"  required>
-            <button type="submit" class="btn btn-primary"> 
+            <!-- <input type="text" #nameInput name="username"  required>
+            <button type="submit" class="btn btn-primary">  -->
 
