--- a/src/app/product-sale/product-sale-list/product-sale-list.component.scss
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.scss
@@ -13,6 +13,7 @@ a {
     -ms-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
+    cursor: pointer;
 }
 h1, h2, h3, h4, h5, h6 {
     letter-spacing: 0;
