--- a/src/app/products/products-list/products-list.component.scss
+++ b/src/app/products/products-list/products-list.component.scss
@@ -49,11 +49,14 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   opacity: .8
+
+
 }
 a {
   color: #1f1f1f;
   text-decoration: none;
   outline: none;
+  cursor: pointer;
 }
 a, .btn {
   text-decoration: none !important;
