--- a/src/app/detail-product/detail-product.component.html
+++ b/src/app/detail-product/detail-product.component.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="details col-md-6">
-          <h3 class="product-title">{{productDetail.name}}</h3>
+          <h3 class="product-title">{{productData['p_name']}}</h3>
           <div class="rating">
             <!-- <div class="stars">
               <span class="fa fa-star "></span>
