--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,7 +30,7 @@
       ></a>
 
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/duygb/Front_End_Final_G32/tree/master" role="button"
         ><i class="fab fa-github"></i
       ></a>
     </section>
