--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="email">
                         <div class="email-center">
-                           <a href=""> <i class="fas fa-envelope-open-text"></i></a>
+                           <a [routerLink]="['/favorite-product']"> <i class="fas fa-heart"></i></a>
                         </div>
                     </div>
                     <div class="account">
