--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -29,15 +29,16 @@
                               <div class="mask-icon">
                                   <ul>
                                       <li><a [routerLink]="['/detail-product']" data-toggle="tooltip" data-placement="right" title="View" ><i class="fas fa-eye"></i></a></li>
-                                      <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
-                                      <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
+                                      <li><a data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
+                                      <li><a  data-toggle="tooltip" data-placement="right" title="Add to Wishlist" (click) = "addToFavorite(product)"><i class="far fa-heart"></i></a></li>
                                   </ul>
                                   <a class="cart" (click) = "addToCart(product)" >Add to Cart</a>
 
                               </div>
                           </div>
+                          <!-- (click)="onSelect(product)" routerLink="/detail-product/{{product.id}}" -->
                           <div class="why-text">
-                              <h4><a routerLink="/detail-product/{{product.name}}" (click)="onSelect(product)">{{product.name}}</a></h4>
+                              <h4><a (click)="onSelect(product)" routerLink="/detail-product/{{product.id}}" >{{product.name}}</a></h4>
                               <h5>SKU: {{product.SKU}}</h5>
                               <div class="price-box">
                                   <span class="priceToBuy">{{product.priceToBuy | currency: "VND"}}</span>
