--- a/src/app/favorite-product/favorite-product.component.html
+++ b/src/app/favorite-product/favorite-product.component.html
@@ -34,11 +34,10 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-end col-md-6 col-lg-6  btn">
-                  <button type="submit" value="Xóa" class="btn-remove" (click)="removePendingFavorite(favorite.id)">Xóa</button>
-                    <button type="submit" value="Mua Lại" class="btn-repurchase">Đặt hàng</button>
+                  <button [routerLink]="['/favorite-product']" type="submit" value="Xóa" class="btn-remove" (click)=removePendingFavorite(favorite.id)>Xóa</button>
+                    <button (click)="addToCart(favorite)" type="submit" value="Mua Lại" class="btn-repurchase">Thêm vào giỏ hàng</button>
                 </div>
             </div>
-
         </div>
     </div>
 
