--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-8"></div>
           <div class="col-lg-4">
-            <button style="width: 300px; background-color: crimson" type="button" class="btn btn-secondary btn-lg">Thanh toán</button>
+            <button (click) = "goOrderProcess()"  style="width: 300px; background-color: crimson" type="button" class="btn btn-secondary btn-lg">Thanh toán</button>
           </div>
         </div>
       </div>
