--- a/src/app/favorite-product/favorite-product.component.html
+++ b/src/app/favorite-product/favorite-product.component.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-end col-md-6 col-lg-6  btn">
-                  <button [routerLink]="['/favorite-product']" type="submit" value="Xóa" class="btn-remove" (click)=removePendingFavorite(favorite.id)>Xóa</button>
+                  <button  type="submit" value="Xóa" class="btn-remove" (click)=removePendingFavorite(favorite.id)>Xóa</button>
                     <button (click)="addToCart(favorite)" type="submit" value="Mua Lại" class="btn-repurchase">Thêm vào giỏ hàng</button>
                 </div>
             </div>
