--- a/src/app/order-process/order-process.component.scss
+++ b/src/app/order-process/order-process.component.scss
@@ -2,8 +2,17 @@
   width: 600px;
   margin: 100px auto;
 }
+.status{
+  width: max-content;
+  text-transform: uppercase;
+  font-weight: bold;
+  size: 20px;
+  margin: 50px auto;
+}
 .progressbar {
   counter-reset: step;
+  width: 600px;
+  margin: 50px auto;
 }
 .progressbar li {
   list-style-type: none;
@@ -49,4 +58,113 @@
 }
 .progressbar li.active + li:after {
   background-color: #55b776;
+}
+// ===========================================
+
+span{
+  font-weight: 500;
+}
+.content-history {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: rgba(241, 238, 238, 0.959);
+  border-radius: 5px;
+
+  .infor-pro {
+      height: 130px;
+      width: 100%;
+      .img-info{
+          height: 130px;
+          .info{
+              height: 130px;
+              margin-left: -40px;
+              flex-direction: column;
+              display: flex;
+              text-align: left;
+              .name{
+                display: inline-block;
+                font-weight: 500;
+                text-transform: uppercase;
+                font-weight: bold;
+              }
+
+          }
+          .price{
+              height: 130px;
+              display: flex;
+              align-items: center;
+             margin-left:315px;
+          }
+      }
+
+  }
+  .sum-money{
+      height: 50px;
+      border-top: 1px solid gray;
+      .money{
+          height: 50px;
+          display: flex;
+          display: -webkit-flex;
+          align-items: center;
+      }
+  }
+  .manipulation{
+      height: 100px;
+      .status-order{
+          height: 100px;
+          display: -webkit-box;
+          display: -moz-box;
+          display: -ms-flexbox;
+          display: -webkit-flex;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .title-status{
+             .title{
+              font-weight: 100;
+              font-size: 15px;
+             }
+
+          }
+      }
+      .btn{
+          height: 100px;
+          display: -webkit-box;
+          display: -moz-box;
+          display: -ms-flexbox;
+          display: -webkit-flex;
+          display: flex;
+          align-items: center;
+          .btn-repurchase{
+              border-radius: 5px;
+              height: 40px;
+              width: 150px;
+              background-color: #ddda07;
+              border: none;
+          }
+          .btn-repurchase:hover{
+              background-color: #cfe66d;
+          }
+          .btn-repurchase::after{
+              content: "";
+          }
+          .btn-remove{
+            margin-right: 5px;
+           border-radius: 5px;
+           height: 40px;
+           width: 150px;
+           background-color: #ed143d;
+           border: none;
+       }
+       .btn-remove:hover{
+         background-color: #e95772;
+     }
+     .btn-remove::after{
+         content: "";
+     }
+      }
+  }
 }
