--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -28,7 +28,7 @@
                               <img src="./../../../assets/Image/SaleProduct-Image/{{product.thumbnail}}" alt="" class="img-fluid">
                               <div class="mask-icon">
                                   <ul>
-                                      <li><a  data-toggle="tooltip" data-placement="right" title="View" ><i class="fas fa-eye"></i></a></li>
+                                      <li><a (click)="intoDetail(product)"  data-toggle="tooltip" data-placement="right" title="View" ><i class="fas fa-eye"></i></a></li>
                                       <li><a data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                       <li><a  data-toggle="tooltip" data-placement="right" title="Add to Wishlist" (click) = "addToFavorite(product)"><i class="far fa-heart"></i></a></li>
                                   </ul>
@@ -37,7 +37,7 @@
                           </div>
                           <!-- (click)="onSelect(product)" routerLink="/detail-product/{{product.id}}" -->
                           <div class="why-text">
-                              <h4><a (click)="onSelect(product)">{{product.name}}</a></h4>
+                              <h4><a (click)="intoDetail(product)">{{product.name}}</a></h4>
                               <h5>SKU: {{product.SKU}}</h5>
                               <div class="price-box">
                                   <span class="priceToBuy">{{product.priceToBuy | currency: "VND"}}</span>
