--- a/src/app/product-sale/sidebar/sidebar.component.scss
+++ b/src/app/product-sale/sidebar/sidebar.component.scss
@@ -1550,7 +1550,7 @@ ul.cart-list > li.total > .btn:hover{
     opacity: 1;
 }
 .search-product button {
-    background: #010101;
+    background: crimson;
     color: #ffffff;
     font-size: 18px;
     position: absolute;
@@ -1563,7 +1563,7 @@ ul.cart-list > li.total > .btn:hover{
     height: 100%;
 }
 .search-product button:hover{
-    background: #d33b33;
+    background: #010101;
 }
 .filter-sidebar-left{
     margin-bottom: 20px;
